// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should return messages object with custom message key mapper 1`] = `
"msgid \\"\\"
msgstr \\"\\"
\\"POT-Creation-Date: 2017-02-01T11:23:12.000Z\\\\n\\"
\\"Content-Type: text/plain; charset=UTF-8\\\\n\\"
\\"Content-Transfer-Encoding: 8bit\\\\n\\"
\\"MIME-Version: 1.0\\\\n\\"
\\"X-Generator: react-intl-po\\\\n\\"


#: ./test/messages/src/containers/App/App.json
#. [App.Creator 1] - Creator 1
#. defaultMessage is:
#. Creator
msgid \\"App.Creator 1\\"
msgstr \\"\\"

#: ./test/messages/src/containers/App/App.json
#. [App.Creator 2] - Creator 2
#. defaultMessage is:
#. Creator
msgid \\"App.Creator 2\\"
msgstr \\"\\"

#: ./test/messages/src/containers/App/App.json
#. [App.errorButton] - Click error Button
#. defaultMessage is:
#. Go to MCS website
msgid \\"App.errorButton\\"
msgstr \\"\\"

#: ./test/messages/src/containers/App/App.json
#. [App.errorMessage] - The error message when api response as 404 not found
#. defaultMessage is:
#. The device is now private or deleted.
msgid \\"App.errorMessage\\"
msgstr \\"\\"

#: ./test/messages/src/containers/NotFound/messages.json
#. [NotFound.Creator] - Creator
#. defaultMessage is:
#. Creator
msgid \\"NotFound.Creator\\"
msgstr \\"\\"

#: ./test/messages/src/containers/NotFound/messages.json
#. [NotFound.errorButton] - Click error Button
#. defaultMessage is:
#. Go to MCS website
msgid \\"NotFound.errorButton\\"
msgstr \\"\\"
"
`;

exports[`should return messages object with default mapper 1`] = `
"msgid \\"\\"
msgstr \\"\\"
\\"POT-Creation-Date: 2017-02-01T11:23:12.000Z\\\\n\\"
\\"Content-Type: text/plain; charset=UTF-8\\\\n\\"
\\"Content-Transfer-Encoding: 8bit\\\\n\\"
\\"MIME-Version: 1.0\\\\n\\"
\\"X-Generator: react-intl-po\\\\n\\"


#: ./test/messages/src/containers/App/App.json
#. [App.Creator 1] - Creator 1
#. defaultMessage is:
#. Creator
#: ./test/messages/src/containers/App/App.json
#. [App.Creator 2] - Creator 2
#. defaultMessage is:
#. Creator
#: ./test/messages/src/containers/NotFound/messages.json
#. [NotFound.Creator] - Creator
#. defaultMessage is:
#. Creator
msgid \\"Creator\\"
msgstr \\"\\"

#: ./test/messages/src/containers/App/App.json
#. [App.errorButton] - Click error Button
#. defaultMessage is:
#. Go to MCS website
#: ./test/messages/src/containers/NotFound/messages.json
#. [NotFound.errorButton] - Click error Button
#. defaultMessage is:
#. Go to MCS website
msgid \\"Go to MCS website\\"
msgstr \\"\\"

#: ./test/messages/src/containers/App/App.json
#. [App.errorMessage] - The error message when api response as 404 not found
#. defaultMessage is:
#. The device is now private or deleted.
msgid \\"The device is now private or deleted.\\"
msgstr \\"\\"
"
`;
